kubernetes/infrastructure/controllers/observability/kube-prometheus-stack/grafana-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Grafana
    gethomepage.dev/group: Platform
    gethomepage.dev/icon: grafana.png
    gethomepage.dev/href: https://grafana.syslabs.dev
    gethomepage.dev/podSelector: app.kubernetes.io/name=grafana
    gethomepage.dev/statusStyle: "dot"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.syslabs.dev`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
  tls: {}
