kubernetes/infrastructure/controllers/observability/kube-prometheus-stack/prometheus-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Prometheus
    gethomepage.dev/group: Observability
    gethomepage.dev/icon: prometheus.png
    gethomepage.dev/href: https://prometheus.syslabs.dev
    gethomepage.dev/podSelector: app.kubernetes.io/name=prometheus
    gethomepage.dev/statusStyle: "dot"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.syslabs.dev`)
      kind: Rule
      middlewares:
        - name: authentik-forward-auth
      services:
        - name: kube-prometheus-stack-prometheus
          port: 9090
  tls: {}
